<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/klogo"
            android:layout_width="150dp"
            android:layout_height="100dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            app:boxBackgroundColor ="@color/whiteColor"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/hitsusername"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            app:boxBackgroundColor ="@color/whiteColor"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassWard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hitspassord"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btntnc"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:text="term and conditions" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chkagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/i_agree"
            android:layout_gravity="center"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MyApp.MyButton"
            android:layout_gravity="center"
            android:elevation="@dimen/buttonelevation"
            android:textColor="@color/whiteColor"
            android:text="@string/btnlbllogin" />
    </LinearLayout>
    </FrameLayout>