<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CheckinFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/custumer_checkin"
        android:textSize="@dimen/txtSizeTitle" />
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divederHeight"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/divermargin"
        android:layout_marginRight="@dimen/divermargin"
        android:background="@color/colorPrimaryDark" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textViewCustomerlbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lblselectcustomer"
            android:textSize="15sp" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:entries="@array/dummyList" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/txtCustomer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:maxLines="1" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/sp_customer"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/txt_customername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                android:text="Choose Customer" />
        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_checkin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Widget.MyApp.MyButton"
            app:icon="@drawable/ic_check_in"
            android:text="@string/check_in"
            />

    </LinearLayout>
    </LinearLayout>
</FrameLayout>
