<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddCustomer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add_customer"
                android:textSize="@dimen/txtSizeTitle" />
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divederHeight"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/divermargin"
                android:layout_marginRight="@dimen/divermargin"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Select State"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:entries="@array/dummyList" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Select City"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:entries="@array/dummyList" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtNewCustomerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor ="@color/whiteColor"
                android:hint="@string/new_hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNewCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/Widget.MyApp.MyButton"
                app:icon="@drawable/ic_plus"
                android:text="@string/add"
                />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>